- Creado ModelsControleller - Cambiado SelectDevicesForRental - Actualizado swagger4
