# src/AppForSEII2526.Web/OpenAPIs/swagger4.json
@@ -125,6 +125,54 @@
         }
       }
     },
+    "/api/Models/GetModelsForRental": {
+      "get": {
+        "tags": [
+          "Models"
+        ],
+        "operationId": "GetModelsForRental",
+        "parameters": [
+          {
+            "name": "modelName",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Purchase/GetPurchaseDetailDTO": {
       "get": {
         "tags": [
